# Pyto

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CNAME  InputAssistant.patch  LICENSE  PORT_LIBRARY.md  Podfile  Pyto Intents copy-Info.plist  Pyto Watch Extension copy-Info.plist  Pyto copy-Info.plist  Pyto copy2-Info.plist  PytoClassesApp.py  PytoClassesShareExtension.py  README.md  WidgetExtension.entitlements  _config.yml  appcenter-post-clone.sh  count_lines.sh  install-theme.html  pip_init.py  setup.sh  so_to_framework.py  workflow
Blink/: KBWebViewBase.m  LICENSE
Extensions/: FullVersionExclusives.json  LLVMSemaphores.swift  README.md  _extensionsimporter.h  _extensionsimporter.m  libfreetype.dylib
Extensions/SciPy/cminpack-master/cmake/: CMakeLists.txt  FindCBLAS.cmake  FindMKL.cmake  cminpack.pc.in  cminpack_utils.cmake
Extensions/SciPy/cminpack-master/examples/: CMakeLists.txt  Makefile  chkdrv.f  chkdrv_.c  cmpfiles.c  errjac.c  genf77tests.c  hesfcn.f  hybdrv.c  hybdrv.f  hybdrv_.c  hyjdrv.f  hyjdrv_.c  ibmdpdr.f  lhesfcn.f  lmddrv.f  lmddrv_.c  lmfdrv.c  lmfdrv.f  lmfdrv_.c  lmsdrv.c  runtest.cmake  ssqfcn.c  tchkderc_box.c  tenorm_.c  tenormc.c  tfdjac2_.c  tfdjac2c.c  thybrj1_.c  thybrj1c.c  thybrj_.c  thybrjc.c  tlmder1_.c  tlmder1c.c  tlmderc.c  tlmderc_box.c  tlmdif1_.c  tlmdif1c.c  tlmdifc.c  tlmstr_.c  (+4 more)
Extensions/SciPy/cminpack-master/examples/ref/: hchkdrvc.ref  hibmdpdrc.ref  hlmddrvc.ref  hlmsdrvc.ref  htchkderc.ref  htchkderc_box.ref  htenormc.ref  htfdjac2c.ref  hthybrj1c.ref  hthybrjc_box.ref  htlmderc.ref  htlmderc_box.ref  htlmdif1c.ref  htlmstr1c.ref  hybdrv.ref  hybdrvc.ref  hyjdrv.ref  hyjdrvc.ref  ibmdpdr.ref  lchkdrvc.ref  lhybdrvc.ref  lhyjdrvc.ref  libmdpdrc.ref  llmddrvc.ref  llmsdrvc.ref  lmddrv.ref  lmddrvc.ref  lmfdrv.ref  lmfdrvc.ref  lmsdrvc.ref  ltfdjac2c.ref  ltlmder1c.ref  ltlmderc_box.ref  ltlmdif1c.ref  ltlmdifc.ref  schkdrvc.ref  shyjdrvc.ref  sibmdpdrc.ref  slmddrvc.ref  slmsdrvc.ref  (+23 more)
Extensions/SciPy/cminpack-master/examples/testdata/: README  chkder.data  ssq.data
Intents UI/: Info.plist  IntentViewController.swift
Lib/: Makefile  README.md  UIKit.py  UIKit.rst  __check_type__.py  __image__.py  __main__.py  __pyto_ui_garbage_collector__.py  __shortcuts_store__.py  __watch_script_store__.py  _add_url_params.py  _clang.py  _codecompletion.py  _docsupport.py  _exc_handling.py  _ios_getpass.py  _ios_popen.py  _link_modules.py  _opencv_view.py  _pip.py  _sharing.py  _system.py  _values.py  apps.py  background.py  bookmarks.py  build_cproj.py  calendar_events.py  conf.py  console.py  extensionsimporter.py  file_system.py  find.py  index.rst  location.py  mainthread.py  motion.py  multipeer.py  music.py  notification_center.py  (+32 more)
NumPy/: Info.plist
Pandas/: Info.plist  hashing.cpython-37m-darwin.so copie
Python/: bytes_methods.h  datetime.h  pyconfig-arm64.h  pyconfig-x86_64.h
Python App/: README.md
Python iOS/: Info.plist
Python3_Mac/: Info.plist  Python3_Mac.h  Python3_Mac.swift
Pyto Intents/: GetScriptOutputIntentHandler.swift  Info.plist  IntentHandler.swift  IntentScript.swift  Pyto Intents-Bridging-Header.h  Pyto Intents.entitlements  RemoveCachedOutput.swift  RunCodeIntentHandler.swift  RunScriptIntentHandler.swift  RunShortcutsScript.swift  setArgv.m
Pyto Mac/: AppDelegate.swift  Code Completion.swift  EditorViewController.swift  Info.plist  Pyto Mac-Bridging-Header.h  Startup.py  installer.py
Pyto Share/: ActionViewController.swift  DocumentPickerViewController.swift  Info.plist
Pyto Watch/: Info.plist  Interface.storyboard
Pyto Watch Extension/: Complication.swift  ComplicationCache.swift  ComplicationController.swift  ExtensionDelegate.swift  ImageInterfaceController.swift  Info.plist  InterfaceController.swift  PyComplication.swift  PyWatchUI.swift  SessionDelegate.swift
Pyto Widget/: ConsoleViewController.swift  Info.plist  NoScriptViewController.swift  Pyto Widget-Bridging-Header.h  main.py  (+2 more)
Pyto/Samples/_project_template/: MANIFEST.in  setup.cfg
Pyto/Samples/_project_template/{name}/: __init__.py  ui_init.py
Pyto/UI/Screenshots/Clipboard Manager/: README.md  setup.cfg  setup.py
Pyto/UI/Screenshots/Clipboard Manager/Clipboard_Manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Pyto/UI/Screenshots/Clipboard Manager/clipboard_manager/: __init__.py  path.py
Pyto/UI/Screenshots/Clipboard Manager/docs/: index.rst  reference.rst
SciPy/cminpack-master/: CMakeLists.txt  Makefile  cminpack.sln  cminpack.vcxproj.filters  covar1.c  dogleg_.c  fdjac1_.c  fdjac2_.c  hybrd1.c  hybrd1_.c  hybrj.c  hybrj1.c  lmder1.c  lmder_.c  lmdif1.c  lmpar_.c  lmstr.c  lmstr1.c  qform.c  qrfac.c  qrfac_.c  r1updt.c  rwupdt_.c
SciPy/cminpack-master/cminpack.xcodeproj/project.xcworkspace/xcuserdata/adrianlabbe.xcuserdatad/: UserInterfaceState.xcuserstate
SciPy/cminpack-master/cminpack.xcodeproj/xcuserdata/adrianlabbe.xcuserdatad/xcschemes/: xcschememanagement.plist
SciPy/cminpack-master/cuda/: covar.cu  dogleg.cu  enorm.cu  hybrj.cu  lmstr.cu  lmstr1.cu  qform.cu  r1mpyq.cu  rwupdt.cu
SciPy/cminpack-master/docs/: hybrd1_.3  hybrj1_.3  index.html  lmdif1_.3  lmdif_.3  lmdif_.html  lmstr1_.3  lmstr_.3  man.html  minpack-documentation.txt
SciPy/cminpack-master/examples/: README  chkdrv.c  hyjdrv.c  ibmdpdr.c  ibmdpdr_.c  lmddrv.c  lmsdrv.f  lmsdrv_.c  machar.c  machar.f  neqipt.c  neqipt.f  ssq.h  ssqipt.c  ssqipt.f  ssqjac.c  tchkder_.c  thybrd1_.c  thybrd1c.c  thybrd_.c  thybrdc.c  thybrjc_box.c  tlmder_.c  tlmdif_.c  tlmstr1_.c  tlmstr1c.c  tlmstrc.c  vecfcn.c
SciPy/cminpack-master/examples/ref/: chkdrv.ref  hhybdrvc.ref  hhyjdrvc.ref  hlmfdrvc.ref  hthybrd1c.ref  hthybrdc.ref  hthybrjc.ref  htlmder1c.ref  htlmdifc.ref  htlmstrc.ref  llmfdrvc.ref  lmsdrv.ref  shybdrvc.ref  slmfdrvc.ref  stchkderc.ref  sthybrdc.ref  sthybrjc.ref  sthybrjc_box.ref  stlmder1c.ref  stlmderc.ref  stlmdif1c.ref  tchkder.ref  tenormc.ref  thybrj1c.ref  tlmdif.ref
SciPy/cminpack-master/examples/testdata/: neq.data  um.data
SciPy/cminpack-master/fortran/: README.txt  minpack.f90
(+3282 files in other folders)
