[metadata]
name = {name}
version = 1.0
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
url = {url}
author = {author}
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = {pkg}
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    {cmd}={pkg}:main
