[metadata]
name = Clipboard-Manager
version = 1.0
description = A clipboard manager
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Emma Labbé
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = clipboard_manager
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    clipboard_manager=clipboard_manager:main